# tarkov-price-overlay

./: .gitignore  BUILD.md  CLAUDE.md  README.md  package-lock.json  package.json  runtime-hook-torch.py  tarkov-server.spec  vite.config.ts
.claude/: settings.json  settings.local.json
poe-simulator/: CLAUDE.md  PLAN.md  package-lock.json  package.json
poe-simulator/docs/: TODO-terms.md  TRANSLATION.md  poe-glossary-full.json  poe-glossary.json
poe-simulator/scripts/: fetch-mods.mjs  fetch-uniques.mjs
python-core/: capture.py  main.py  ocr.py  quest_tracker.py  requirements.txt  tarkov_api.py
scripts/: build.ps1  portable.ps1  release.ps1  run-local.ps1
src/: App.css  App.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
sticky-notes-extension/: CLAUDE.md  README.md  manifest.json
sticky-notes-extension/content/: content.js  styles.js
sticky-notes-extension/options/: options.css  options.html  options.js
sticky-notes-extension/popup/: popup.css  popup.html  popup.js
sticky-notes-extension/scripts/: make-icons.py  package.ps1
sticky-notes-extension/store/: listing.md  permissions-justification.md  privacy-policy-en.md  privacy-policy-ko.md  privacy.html
tarkov-price-overlay/: .gitignore  BUILD.md  CLAUDE.md  LICENSE  README.md  installer-readme.txt  package-lock.json  package.json  tarkov-server.spec
tarkov-price-overlay/docs/: VERCEL_SETUP.md  feedback-prompt-v1.1.4.md
tarkov-price-overlay/landing/: index.html  llms.txt  robots.txt  sitemap.xml  styles.css  vercel.json
tarkov-price-overlay/src/: App.css  (+3 more)
tarkov-price-overlay/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
tarkov-price-overlay/src-tauri/capabilities/: default.json
tarkov-price-overlay/src-tauri/icons/: icon.icns
tarkov-price-overlay/src-tauri/src/: lib.rs
web-tools/: .gitignore  PLAN.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+100 files in other folders)
