[package]
name = "tarkov-price-overlay"
version = "0.1.3"
description = "Tarkov in-game item price overlay"
authors = ["pado8"]
edition = "2021"

[lib]
name = "tarkov_price_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
device_query = "2"
